add gsap animation into element

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon">
 </head>
-<body>
+<body class="pointer">
 
     <div class="hero">
         <header>
@@ -37,7 +37,8 @@
     <div class="about two">
         <div class="container">
             <div class="text">
-                <h2>best design <span>on right build</span> </h2>
+                <h2>best design</h2>
+                <span class="typewriter">on right build</span>
 
                 <div class="boxs">
                     <div class="box">
